added Google map onto contact page

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="./css/style.css"> 
     <link rel="stylesheet" href="./css/portfolio.css"> 
+    <link rel="icon" href="images/logo-png.png" > 
 </head>
 <body>
     <special-header></special-header>
