--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <title>About</title>
     <link rel="stylesheet" href="./css/style.css"> 
     <link rel="stylesheet" href="./css/about.css">
+    <link rel="icon" href="images/logo-png.png" > 
 </head>
 <body>
     <special-header></special-header>
