--- a/services.html
+++ b/services.html
@@ -6,6 +6,7 @@
     <title>Services</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/services.css">
+    <link rel="icon" href="images/logo-png.png" > 
 </head>
 <body>
     <special-header></special-header> <!-- Custom header element -->
